fix(plugins/plugin-carbon-themes): sidecar table contrast issue fix in carbon gray10

--- a/plugins/plugin-carbon-themes/web/css/carbon-gray10.css
+++ b/plugins/plugin-carbon-themes/web/css/carbon-gray10.css
@@ -83,10 +83,6 @@ body[kui-theme="Carbon Gray10"] {
   --color-latency-13: #d4bbff;
 }
 
-body[kui-theme="Carbon Gray10"] sidecar .bx--data-table td,
-body[kui-theme="Carbon Gray10"] sidecar .bx--data-table th {
-  color: var(--color-text-inverted03);
-}
 body[kui-theme="Carbon Gray10"] sidecar .bx--data-table td .slightly-deemphasize {
   color: var(--color-base02);
 }
